# newsbot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  check_redis.py  continuous_runner.py  flush_redis.py  flush_story.py  list_stories.py  mypy.ini  pyproject.toml  show_story.py
.github/instructions/: instructions.md  instructions.md.instructions.md
configs/: README.md  config.yaml  secrets.yaml.example
docs/: configuration.md  continuous_runner.md  semantic_deduplication.md
scripts/: check_and_start_redis.sh  start-redis.ps1  start_newsbot.bat  start_newsbot.sh
specs/: prd.md  todo.md
src/: article_scraper.py  bluesky_poster.py  config_loader.py  deduplicator.py  fetcher.py  fetcher_rss.py  filter.py  main.py  relevance_checker.py  storage.py  summarizer.py  typechecking.py  url_decoder.py
stubs/: GoogleNews.pyi  blueskysocial.pyi  langdetect.pyi  trafilatura.pyi
stubs/newspaper/: __init__.pyi  article.pyi
tests/: conftest.py  test_article_scraper.py  test_article_scraper_new.py  test_bluesky_poster.py  test_config_loader.py  test_deduplicator.py  test_fetcher.py  test_filter.py  test_relevance_checker.py  test_storage.py  test_summarizer.py
