[project]
name = "newsbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry Mogilevsky",email = "dmitry.mogilevsky@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "redis (>=6.2.0,<7.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "googlenews (>=1.6.15,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"
mypy = "^1.16.1"
pre-commit = "^4.2.0"
pytest = "^8.4.1"
types-pyyaml = "^6.0.12.20250516"
types-redis = "^4.6.0.20241004"

